@@ -1,3 +1,5 @@
+* Fixed Konqueror Element#replace bug in _createContextualFragment() that threw errors when passed incompatible markup. [jddalton, kangax]
+
 * Allow objects to execute their own `clone` method when passed to Fuse.Object.clone(). [jddalton]
 
 * Make the Fuse.List methods intentionally generic so they don't require that their `this` value be an Array object. [jddalton]
